# api

./: .gitignore  Cargo.toml  README.md
sprint-api/: .gitignore  Cargo.toml
sprint-api/src/: main.rs
sprint-api/src/models/: client.rs  item.rs  mod.rs  order_status.rs  payment_method.rs  rule.rs  user.rs
sprint-api/src/routes/: users.rs
sprint-api/src/utilities/: result.rs
src/: main.rs  secret.key
src/models/: checkout.rs  client.rs  item.rs  mod.rs  order.rs  order_status.rs  payment_method.rs  product.rs  response.rs  rule.rs  service.rs  user.rs
src/routes/: authentication.rs  users.rs
src/utilities/: auth.rs  client.rs  mod.rs  result.rs
templates/: 404.html.hbs  500.html.hbs  home.html.hbs
