[package]
name = "flowban-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde_json = "1.0.81"
anyhow = "1.0.58"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
typetag = "0.1.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["async-std-runtime", "async-std"]