[package]
name = "flowban-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde_json = "1.0.81"
anyhow = "1.0.58"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
typetag = "0.1.8"
tokio = "1.19.2"
once_cell = "1.12.0"
jwt = "0.16.0"
rustc-serialize = "0.3.24"
sha2 = "0.10.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["async-std-runtime", "async-std"]